# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bcv-api"
dynamic = ["version"]
description = "Parses BCV html to get prices of currencies in VEF"
readme = "README.md"
authors = [{ name = "sivefunc", email = "sivefunc@tuta.io" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["bcv", "exchange", "api", "venezuela", "http"]
dependencies = [
    "requests>=2.32.3"
]
requires-python = ">=3.9"

[tool.setuptools.dynamic]
version = {attr = "_version.__version__"}

[project.urls]
Homepage = "https://gitlab.com/sivefunc/bcv-api"
